--- a/ingress2.yaml
+++ b/ingress2.yaml
@@ -18,13 +18,30 @@ spec:
     spec:
       containers:
       - name: whoami
-        image: nginx
+        image: hashicorp/http-echo
+        args:
+          - "-text=kama"
         ports:
         - containerPort: 8000
      
 ---
+kind: Service
+apiVersion: v1
+metadata:
+  name: whoami-svc1
+spec:
+  type: ClusterIP
+  ports:
+  - name: http
+    port: 80
+    targetPort: 8000
+    protocol: TCP
+  selector:
+    app: whoami
+
+---
 kind: Ingress
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: extensions/v1beta1
 metadata:
   name: whoami-ingress
 spec:
@@ -38,9 +55,5 @@ spec:
       paths:
       - path: /whoami1
         backend:
-          serviceName: whoami-svc1
-          servicePort: 80
-      - path: /whoami2
-        backend:
-          serviceName: whoami-svc2
+          serviceName: whoami-ingress
           servicePort: 80
