--- a/ingress2.yaml
+++ b/ingress2.yaml
@@ -1,59 +1,80 @@
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: demo-ingress
+spec:
+  rules:
+  - host: mysite3.com
+    http:
+      paths:
+      - backend:
+          serviceName: nginx
+          servicePort: 80
+  - host: mysite4.com
+    http:
+      paths:
+      - backend:
+          serviceName: httpd
+          servicePort: 80
+
 ---
-apiVersion: apps/v1
+apiVersion: v1
+kind: Service
+metadata:
+  name: httpd
+spec:
+  type: LoadBalancer
+  ports:
+  - port: 80
+    targetPort: 80
+  selector:
+    app: httpd
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx
+spec:
+  type: LoadBalancer
+  ports:
+  - port: 80
+    targetPort: 80
+  selector:
+    app: nginx
+
+---
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: whoami-deploy
-  labels:
-    app: whoami
+  name: nginx
 spec:
   replicas: 1
-  selector:
-    matchLabels:
-      app: whoami
   template:
     metadata:
       labels:
-        app: whoami
-        env: production
+        app: nginx
     spec:
       containers:
-      - name: whoami
-        image: hashicorp/http-echo
-        args:
-          - "-text=kama"
+      - name: echoserver
+        image: nginx
         ports:
-        - containerPort: 8000
-     
----
-kind: Service
-apiVersion: v1
-metadata:
-  name: whoami-svc1
-spec:
-  type: ClusterIP
-  ports:
-  - name: http
-    port: 80
-    targetPort: 8000
-    protocol: TCP
-  selector:
-    app: whoami
+        - containerPort: 80
 
 ---
-kind: Ingress
 apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
-  name: whoami-ingress
+  name: httpd
 spec:
-  tls:
-  - hosts:
-    - whoami.example.com
-    secretName: whoami-secret
-  rules:
-  - host: whoami.example.com
-    http:
-      paths:
-      - path: /whoami1
-        backend:
-          serviceName: whoami-ingress
-          servicePort: 80
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: httpd
+    spec:
+      containers:
+      - name: echoserver
+        image: httpd
+        ports:
+        - containerPort: 80
